<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitCoach</string>

    <!-- Welcome -->
    <string name="welcome">Welcome!</string>
    <string name="welcome_google_fit_description">GoogleFit lets you control your fitness data from multiple apps and devices</string>
    <string name="welcome_google_fit_fitcoach_benefit">By connecting Google Fit and FitCoach, we\'ll help you remember complete your fitness goals</string>
    <string name="welcome_connect_to_google_fit">Connect to Google Fit</string>
    <string name="welcome_dont_connect_to_google_fit">No thanks</string>

    <!-- Settings -->
    <string name="settings_key">fitcoach_settings</string>
    <string name="settings_is_authorized_for_google_key">is_authorized_for_google</string>

    <!-- Goal Setup -->
    <string name="title_activity_google_fit_goal_setup">Add new goal</string>
    <string name="action_save">Save</string>
    <string name="goal_name_label">Name</string>
    <string name="goal_name_hint">Active Time</string>
    <string name="goal_label">Goal</string>
    <string name="goal_type_label">Type</string>
    <string name="goal_type_value">Active Time</string>
    <string name="goal_notification_message_label">Message</string>
    <string name="goal_notification_message">You haven\'t completed your goal for today. Get moving!</string>

    <!-- Goal type units -->
    <string name="goal_type_unit_active_time">min</string>

    <!-- GoalDialogFragment -->
    <string name="goal_hint">80</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Home -->
    <string name="title_activity_home">FitCoach</string>

</resources>
