<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dialog_bottom_padding"
        android:paddingEnd="@dimen/dialog_right_padding"
        android:paddingLeft="@dimen/dialog_left_padding"
        android:paddingRight="@dimen/dialog_right_padding"
        android:paddingStart="@dimen/dialog_left_padding"
        android:paddingTop="@dimen/dialog_top_padding">

        <TextView
            style="@style/AppTheme.Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_label" />

        <EditText
            android:id="@+id/goal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_hint"
            android:inputType="number"
            android:maxLength="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_button_area_height"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            style="@style/AppTheme.Button.Dialog"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/dialog_ok"
            style="@style/AppTheme.Button.Dialog"
            android:text="@string/ok" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bottom_padding" />

</LinearLayout>