<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nispok.fitcoach.fragments.WelcomeFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_content_padding">

            <ImageView
                android:id="@+id/fit_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:src="@mipmap/fit" />

            <TextView
                style="@style/AppTheme.Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_google_fit_description" />

            <TextView
                style="@style/AppTheme.Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_google_fit_fitcoach_benefit" />

            <Button
                style="@style/AppTheme.Button.Primary"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome_connect_to_google_fit" />

            <Button
                style="@style/AppTheme.Button.Secondary"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome_dont_connect_to_google_fit" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>
